	PR middle-end/71494 	* tree-nested.c (convert_nonlocal_reference_stmt): For GIMPLE_GOTO 	without LABEL_DECL, set *handled_ops_p to false instead of true.

* gcc.c-torture/execute/pr71494.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@237317 138bc75d-0d04-0410-961f-82ee72b054a4